# windows-timezones

./: CHANGELOG.md  Cargo.toml  README.md
generate/: Cargo.toml
generate/src/: main.rs
src/: generated.rs  lib.rs
