[package]
name = "generate"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.97"
heck = "0.5.0"
proc-macro2 = { version = "1.0.94", default-features = false }
quick-xml = "0.37.2"
quote = { version = "1.0.40", default-features = false }
reqwest = { version = "0.12.14", default-features = false, features = ["default-tls", "blocking"] }
